# docker-sops-secrets

./: CMakeLists.txt  Cargo.toml  Dockerfile.cli  Dockerfile.exporter  Dockerfile.server  pyproject.toml
clients/python/: pyproject.toml
clients/python/sops_client/: __init__.py  sops_client.py
core/: CMakeLists.txt  Cargo.toml  Dockerfile.cli  Dockerfile.server
core/docker/: entrypoint-server.sh
core/src/: lib.rs
core/src/server/: config.rs  docker.rs  errors.rs  file_cleaner.rs  handlers.rs  health.rs  mod.rs  models.rs  rate_limiter.rs  secure_secret.rs  server.rs  state.rs  utils.rs
core/src/shared/: age.rs  file_lock.rs  logging.rs  mod.rs  sops.rs
core/src/sops/: mod.rs  private.rs  public.rs
core/tests/integration-docker/: pyproject.toml
core/tests/integration-local/: conftest.py  pyproject.toml  test_basic_operations.py
docker/: entrypoint-server.sh
src/: lib.rs
src/cli/: mod.rs
src/server/: config.rs  docker.rs  errors.rs  file_cleaner.rs  handlers.rs  health.rs  mod.rs  models.rs  rate_limiter.rs  secure_secret.rs  server.rs  state.rs  utils.rs
src/shared/: age.rs  mod.rs  sops.rs
tests/integration/: Dockerfile.test-runner  conftest.py  docker-compose.test.yml  test_helpers.py  test_runner.py  test_scenarios.py
