[package]
name = "sops-secrets"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sops-secrets"
path = "src/main.rs"

[dependencies]
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bollard = "0.19.1"
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
