[package]
name = "sops-secrets"
version = "0.1.0"
edition = "2024"

[features]
insecure_mode = []

[[bin]]
name = "sops-secrets-server"
path = "src/bin/server.rs"

[[bin]]
# This is intentionally the same source file for different binary names as we use the insecure_mode feature to enable/disable
# logging and docker security checks
name = "sops-secrets-server-local"
path = "src/bin/server.rs"
required-features = ["insecure_mode"]

[[bin]]
name = "sops-secrets-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "sops-secrets-exporter"
path = "src/bin/exporter.rs"

[dependencies]
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = { version = "0.4", features = ["std"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
bollard = "0.19.1"
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
age = { version = "0.11.1", features = ["cli-common", "armor"] }
zeroize = "1.8.1"
reqwest = { version = "0.11", features = ["json"] }
xattr = "1.0"
secrecy = "0.8"
subtle = "2.5"
hex = "0.4"
regex = "1.10"
lazy_static = "1.4"
libc = "0.2"
# hyper = { version = "0.14", features = ["server"] }

[dev-dependencies]
proptest = "1.3"
tempfile = "3.8"

[profile.release]
overflow-checks = true
debug-assertions = true
strip = true
lto = true
codegen-units = 1

[alias]
secure-check = [
    "clippy", "--all-targets", "--all-features", "--",
    "-D", "clippy::unwrap_used",
    "-D", "clippy::expect_used", 
    "-D", "clippy::indexing_slicing",
    "-D", "clippy::panic",
    "-D", "clippy::unnecessary_unwrap",
    "-D", "clippy::unchecked_duration_subtraction",
]
