[project]
name = "sops-secrets-client"
version = "0.1.0"
description = "Python client for sops-secrets"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "aiofiles>=0.8.0",
    "cryptography>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sops_client"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
] 