[project]
name = "sops-secrets-integration-tests"
version = "0.1.0"
description = "Integration tests for sops-secrets"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "sops-secrets-client",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = [] 